adicionando menu responsivo

--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="header">
-          <img
-            class="header__logo"
-            src="./img/logoTac.png"
-            alt="ilustração do logo da empresa"
-          />
+      <div class="header">
+        <img
+          class="header__logo"
+          src="./img/logoTac.png"
+          alt="ilustração do logo da empresa"
+        />
+        <!-- Hamburger icon -->
+        <input class="responsiveMenu" type="checkbox" id="responsiveMenu" />
+        <label class="responsiveMenuHamb" for="responsiveMenu">
+          <span class="responsiveMenuHamb__line"></span>
+        </label>
+
+        <nav>
           <ul class="header__nav">
             <li>
               <a href="#home">home</a>
@@ -43,8 +49,8 @@
               <a href="#entrar">entrar</a>
             </li>
           </ul>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
     <section class="home" id="home"></section>
     <!--Importação bootstrap-->
@@ -73,5 +79,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+
+    <!--scripts próprios-->
   </body>
 </html>
