adicionando banner página home e animação typewriter

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--folhas de estilo-->
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/headerStyle.css" />
+    <link rel="stylesheet" href="./css/homeStyle.css" />
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -52,7 +53,15 @@
         </nav>
       </div>
     </header>
-    <section class="home" id="home"></section>
+    <section class="home" id="home">
+      <div class="home__banner">
+        <img src="/img/bannerHome.png" alt="fotografia de uma rua e um tunel" />
+      </div>
+      <div class="home__text">
+        <h2>Tac seu condomínio online em todos os dispositivos</h2>
+        <strong id="text"></strong>
+      </div>
+    </section>
     <!--Importação bootstrap-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -81,5 +90,6 @@
     ></script>
 
     <!--scripts próprios-->
+    <script src="/js/typeWriter.js"></script>
   </body>
 </html>
