ajustando caminho diretórios

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
     </header>
     <section class="home" id="home">
       <div class="home__banner">
-        <img src="/img/bannerHome.png" alt="fotografia de uma rua e um tunel" />
+        <img
+          src="./img/bannerHome.png"
+          alt="fotografia de uma rua e um tunel"
+        />
       </div>
       <div class="home__text">
         <h2>Tac seu condomínio online em todos os dispositivos</h2>
@@ -90,6 +93,6 @@
     ></script>
 
     <!--scripts próprios-->
-    <script src="/js/typeWriter.js"></script>
+    <script src="./js/typeWriter.js"></script>
   </body>
 </html>
