adicionei mais funcionalidades a section home

--- a/index.html
+++ b/index.html
@@ -71,49 +71,208 @@
         <h2>TAC seu condomínio online em todos os dispositivos</h2>
         <strong id="text"></strong>
       </div>
-      <div class="diferenciais">
-        <div class="diferenciais__title">
-          <h2>
-            Diferenciais do
-            <span>TAC</span>
-          </h2>
+
+      <div class="diferenciais__title">
+        <hr class="diferenciais__title-hr" />
+        <h2>
+          Diferenciais do
+          <span>TAC</span>
+        </h2>
+      </div>
+      <div class="diferenciais__container">
+        <div>
+          <img
+            src="./img/detailIconDiferenciais.png"
+            alt="ilustração de um círculo branco"
+          />
+          <h3>Site Grátis</h3>
+          <p>Criamos site personalizado para seu condomínio.</p>
         </div>
-        <div class="diferenciais__container">
-          <div>
+        <div>
+          <img
+            src="./img/detailIconDiferenciais.png"
+            alt="ilustração de um círculo branco"
+          />
+          <h3>Fácil Acesso</h3>
+          <p>Crie um domínio para seu condomínio.</p>
+        </div>
+        <div>
+          <img
+            src="./img/detailIconDiferenciais.png"
+            alt="ilustração de um círculo branco"
+          />
+          <h3>Integração Total</h3>
+          <p>Acesse diretamente as funções do sistema pelo site.</p>
+        </div>
+        <div>
+          <img
+            src="./img/detailIconDiferenciais.png"
+            alt="ilustração de um círculo branco"
+          />
+          <h3>100% em nuvem</h3>
+          <p>
+            Pronto para ser usado de onde você estiver sem necessidade de
+            instalação.
+          </p>
+        </div>
+      </div>
+
+      <div class="diferenciais__icons">
+        <div>
+          <img src="./img/icon1Home.png" alt="" />
+          <h3>TECNOLOGIA DE PONTA</h3>
+          <p>
+            Bancos de dados e estrutura de processamento suportados por
+            servidores dedicados em cloud computer, contando com uma equipe de
+            TI própria e capacitada.
+          </p>
+        </div>
+        <div>
+          <img src="./img/icon2Home.png" alt="" />
+          <h3>FÁCIL DE USAR</h3>
+          <p>
+            Com interface amigavel e fácil todos tem facilidade para usar as
+            ferramentas do sistema.
+          </p>
+        </div>
+        <div>
+          <img src="./img/icon3Home.png" alt="" />
+          <h3>BAIXO CUSTO</h3>
+          <p>
+            Ideal para condomínios de grande, médio porte e síndicos
+            proﬁssionais.
+          </p>
+        </div>
+
+        <div>
+          <img src="./img/icon4Home.png" alt="" />
+          <h3>ALTA SEGURANÇA</h3>
+          <p>
+            Informações salvas em um servidor dedicado em cloud computer de
+            forma segura e eficaz, seguro para os condomínios e seus moradores.
+          </p>
+        </div>
+        <div>
+          <img src="./img/icon5Home.png" alt="" />
+          <h3>TOTALMENTE RESPONSIVO</h3>
+          <p>
+            Design responsivo adequando a qualquer tamanho de tela e facilitando
+            a navegação.
+          </p>
+        </div>
+        <div>
+          <img src="./img/icon6Home.png" alt="" />
+          <h3>MELHORIAS CONTÍNUAS</h3>
+          <p>
+            O sistema TAC está sempre criando novas ferramentas para facilitar
+            na rotina nos condomínios.
+          </p>
+        </div>
+      </div>
+      <div class="vantagens">
+        <h2 class="vantagens__title">
+          Vantagens do
+          <span>TAC</span>
+        </h2>
+        <div>
+          <figure>
             <img
-              src="./img/detailIconDiferenciais.png"
-              alt="ilustração de um círculo branco"
+              src="./img/vantagens1.png"
+              alt="ilustração de duas pessoas olhando um monitor"
             />
-            <h3>Site Grátis</h3>
-            <p>Criamos site personalizado para seu condomínio.</p>
-          </div>
-          <div>
+          </figure>
+          <ul>
+            <li><h4>Recursos do Site</h4></li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Reservas de áreas comuns.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Mural de notícias.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Enquetes e votação online.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Relatórios.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Envio de sms e e-mails.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Obras e eventos.
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <ul>
+            <li><h4>Para o Síndico</h4></li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Otimização do tempo do síndico, proporcionando maior facilidade e
+              agilidade na divulgação das informações importantes para todos os
+              condôminos.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Área para inserção e armazenagem de documentos do condomínio.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Facilidade na organização e acesso aos dados de qualquer morador
+              (proprietário ou inquilino).
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Controle e histórico de solicitações e cancelamentos de utilização
+              de áreas comuns.
+            </li>
+          </ul>
+
+          <figure>
             <img
-              src="./img/detailIconDiferenciais.png"
-              alt="ilustração de um círculo branco"
+              src="./img/vantagens2.png"
+              alt="ilustração de duas pessoas olhando um monitor"
             />
-            <h3>Fácil Acesso</h3>
-            <p>Crie um domínio para seu condomínio.</p>
-          </div>
-          <div>
+          </figure>
+        </div>
+
+        <div>
+          <figure>
             <img
-              src="./img/detailIconDiferenciais.png"
-              alt="ilustração de um círculo branco"
+              src="./img/vantagens3.png"
+              alt="ilustração de duas pessoas olhando um monitor"
             />
-            <h3>Integração Total</h3>
-            <p>Acesse diretamente as funções do sistema pelo site.</p>
-          </div>
-          <div>
-            <img
-              src="./img/detailIconDiferenciais.png"
-              alt="ilustração de um círculo branco"
-            />
-            <h3>100% em nuvem</h3>
-            <p>
-              Pronto para ser usado de onde você estiver sem necessidade de
-              instalação.
-            </p>
-          </div>
+          </figure>
+          <ul>
+            <li><h4>Para o Morador</h4></li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Centraliza todas as informações do condomínio em um só lugar, na
+              internet.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Acesso as informações de qualquer lugar do mundo.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Facilidade na solicitação de reserva para utilização de áreas
+              comuns.
+            </li>
+            <li>
+              <ion-icon name="checkmark"></ion-icon>
+              Maior conforto e autonomia aos moradores para se comunicar com o
+              síndico, utilizar dos serviços do condomínio, obter documentos
+              entre outros dados.
+            </li>
+          </ul>
         </div>
       </div>
     </section>
