--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a href="#contato">contato</a>
             </li>
             <li>
-              <a href="#entrar">entrar</a>
+              <a href="entrar.html">entrar</a>
             </li>
           </ul>
         </nav>
