--- a/entrar.html
+++ b/entrar.html
@@ -40,12 +40,15 @@
                         <i class="fa-regular fa-circle-user"></i>
                       </span>
                     </div>
-                    <input type="email" class="form-control" placeholder="Digite seu email" aria-label="Username" aria-describedby="basic-addon1">
-                </div>              
+                    <input type="email" class="form-control" placeholder="Digite seu usuário" aria-label="Username" aria-describedby="basic-addon1">
+                </div>
+
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">
-                        <i class="fa-sharp fa-solid fa-lock"></i>
-                    </span>
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">
+                            <i class="fa-sharp fa-solid fa-lock"></i>
+                        </span>
+                    </div>
                     <input type="password" class="form-control" placeholder="Digite sua senha" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
     
