--- a/entrar.html
+++ b/entrar.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/custom.css" />
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/headerStyle.css" />
-    <link rel="stylesheet" href="./css/homeStyle.css" />
+    <link rel="stylesheet" href="./css/login.css" />
     <link rel="stylesheet" href="./css/empresaStyle.css" />
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
