adicionando footer e fazendo alguns ajustes de estilo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/headerStyle.css" />
     <link rel="stylesheet" href="./css/homeStyle.css" />
     <link rel="stylesheet" href="./css/empresaStyle.css" />
+    <link rel="stylesheet" href="./css/footerStyle.css"/>
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -139,7 +140,7 @@
           <h3>BAIXO CUSTO</h3>
           <p>
             Ideal para condomínios de grande, médio porte e síndicos
-            proﬁssionais.
+            profissionais.
           </p>
         </div>
 
@@ -531,17 +532,28 @@
         remaining essentially unchanged.
       </p>
     </section>
-    <section id="entrar">
-      <h2>entrar</h2>
-      <p>
-        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing
-        and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s, when an unknown printer took a galley
-        of type and scrambled it to make a type specimen book. It has survived
-        not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged.
-      </p>
-    </section>
+    <footer class="footer">
+      <div>
+        <img
+        class="header__logo"
+        src="./img/logoTac.png"
+        alt="ilustração do logo da empresa"
+      />
+      <p>O sistema TAC possui um conjunto de ferramentas desenvolvidas para tornar mais rápida e eficiente a gestão e administração de seu condomínio.</p>
+      </div>
+      
+      <div>
+        <h3>Contatos</h3>
+        <h4>Fone: (51) 99422-0540</h4>
+        <h4>Email: comercial@taccondominios.com.br</h4>
+        <nav>
+          <a><ion-icon class="redesSociais" name="logo-instagram"></ion-icon></a>
+          <a><ion-icon class="redesSociais" name="logo-whatsapp"></ion-icon></a>
+          <a><ion-icon class="redesSociais" name="logo-twitter"></ion-icon></a>
+          <a><ion-icon class="redesSociais" name="logo-facebook"></ion-icon></a>
+        </nav>
+      </div>
+    </footer>
 
     <!--para funcionar o scroll-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
