alterar cor titulo

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
               <!-- Figure Info -->
               <div class="text-center g-bg-white g-pa-25">
                 <div class="g-mb-15">
-                  <h4 class="h5 g-color-black g-mb-5">O TAC</h4>
+                  <h4 class="h5 title-blue g-mb-5">O TAC</h4>
                   <em
                     class="d-block g-font-style-normal g-font-size-11 text-uppercase g-color-primary"
                   >
@@ -380,8 +380,8 @@
                   </em>
                 </div>
                 <p>
-                  I am an ambitious workaholic, but apart from that, pretty
-                  simple person.
+                  Plataforma online para agilizar e facilitar as tarefas do dia-dia no seu condomínio, encurtando a comunicação entre síndico e moradores.
+
                 </p>
 
                 <hr class="g-brd-gray-light-v4 my-4" />
@@ -409,7 +409,7 @@
               <!-- Figure Info -->
               <div class="text-center g-bg-white g-pa-25">
                 <div class="g-mb-15">
-                  <h4 class="h5 g-color-black g-mb-5">Um sistema único</h4>
+                  <h4 class="h5 title-blue g-mb-5">Um sistema único</h4>
                   <em
                     class="d-block g-font-style-normal g-font-size-11 text-uppercase g-color-primary"
                   >
@@ -417,8 +417,7 @@
                   </em>
                 </div>
                 <p>
-                  I am an ambitious workaholic, but apart from that, pretty
-                  simple person.
+                  Como fazemos o desenvolvimento de cada site de gerenciamento de condomínio, garantimos que todas as necessidades de cada cliente sejam atendidas plenamente, para cada condomínio é elaborado um projeto de site novo, onde são incluídas todas as ferramentas de nosso sistema e então acrescentamos os detalhes pedidos por cada cliente, garantindo a total satisfação de todos os nossos clientes.
                 </p>
 
                 <hr class="g-brd-gray-light-v4 my-4" />
@@ -446,7 +445,7 @@
               <!-- Figure Info -->
               <div class="text-center g-bg-white g-pa-25">
                 <div class="g-mb-15">
-                  <h4 class="h5 g-color-black g-mb-5">Ferramentas</h4>
+                  <h4 class="h5 title-blue g-mb-5">Ferramentas</h4>
                   <em
                     class="d-block g-font-style-normal g-font-size-11 text-uppercase g-color-primary"
                   >
@@ -454,8 +453,7 @@
                   </em>
                 </div>
                 <p>
-                  I am an ambitious workaholic, but apart from that, pretty
-                  simple person.
+                  O sistema TAC possui um conjunto de ferramentas desenvolvidas para tornar mais rápida e eficiente a gestão e administração, contando com recursos que facilitam o relacionamento entre moradores, síndicos e gestores.
                 </p>
 
                 <hr class="g-brd-gray-light-v4 my-4" />
@@ -483,7 +481,7 @@
               <!-- Figure Info -->
               <div class="text-center g-bg-white g-pa-25">
                 <div class="g-mb-15">
-                  <h4 class="h5 g-color-black g-mb-5">Segurança</h4>
+                  <h4 class="h5 title-blue g-mb-5">Segurança</h4>
                   <em
                     class="d-block g-font-style-normal g-font-size-11 text-uppercase g-color-primary"
                   >
@@ -491,8 +489,10 @@
                   </em>
                 </div>
                 <p>
-                  I am an ambitious workaholic, but apart from that, pretty
-                  simple person.
+                  Sistema hospedado em servidor dedicado;
+                  Banco de dados com criptografia;
+                  Área exclusiva para moradores;
+                  Só usuários do sistema tem acesso as áreas restritas do sistema;
                 </p>
 
                 <hr class="g-brd-gray-light-v4 my-4" />
