--- a/index.html
+++ b/index.html
@@ -257,87 +257,88 @@
     </div>
   </section>
   <section id="empresa">
-
-    <h2 class="empresa_title">
-      Conheça o <span class="empresa_title_span">TAC</span>
-    </h2>
-    <div class="row g-bg-white p-5">
-      <div class="col-lg-4 g-mb-30">
-        <!-- Icon Blocks -->
-        <div class="g-pa-10">
-          <div class="media">
-            <div class="media-body align-self-center">
-              <p class="mb-0 titulo_valores">MISSÃO</p>
-              <div class="texto_valores">
-                Desenvolver sites e sistemas web de altíssima qualidade sempre
-                utilizando tecnologia de ponta oferecendo soluções
-                inteligentes e visando sempre a satisfação máxima dos nossos
-                clientes.
+    <div class="g-bg-white">
+      <h2 class="empresa_title">
+        Conheça o <span class="empresa_title_span">TAC</span>
+      </h2>
+      <div class="row  p-5">
+        <div class="col-lg-4 g-mb-30">
+          <!-- Icon Blocks -->
+          <div class="g-pa-10">
+            <div class="media">
+              <div class="media-body align-self-center">
+                <p class="mb-0 titulo_valores">MISSÃO</p>
+                <div class="texto_valores">
+                  Desenvolver sites e sistemas web de altíssima qualidade sempre
+                  utilizando tecnologia de ponta oferecendo soluções
+                  inteligentes e visando sempre a satisfação máxima dos nossos
+                  clientes.
+                </div>
+              </div>
+              <div class="d-flex align-self-center mr-3">
+                <span class="u-icon-v3">
+                  <i class="u-line-icon-pro">
+                    <img src="./img/iconMissao.png" class="icon_empresa" />
+                  </i>
+                </span>
               </div>
             </div>
-            <div class="d-flex align-self-center mr-3">
-              <span class="u-icon-v3">
-                <i class="u-line-icon-pro">
-                  <img src="./img/iconMissao.png" class="icon_empresa" />
-                </i>
-              </span>
-            </div>
           </div>
+          <!-- End Icon Blocks -->
         </div>
-        <!-- End Icon Blocks -->
-      </div>
-
-      <div class="col-lg-4 g-mb-30">
-        <!-- Icon Blocks -->
-        <div class="g-pa-10">
-          <div class="media">
-            <div class="media-body align-self-center">
-              <p class="mb-0 titulo_valores">VISÃO</p>
-              <div class="texto_valores">
-                Desenvolver e hospedar nossos sistemas em servidores web, o
-                que os torna acessíveis de qualquer lugar com disponibilidade
-                de internet, seja através de um computador, tablet ou
-                smartphone.
+  
+        <div class="col-lg-4 g-mb-30">
+          <!-- Icon Blocks -->
+          <div class="g-pa-10">
+            <div class="media">
+              <div class="media-body align-self-center">
+                <p class="mb-0 titulo_valores">VISÃO</p>
+                <div class="texto_valores">
+                  Desenvolver e hospedar nossos sistemas em servidores web, o
+                  que os torna acessíveis de qualquer lugar com disponibilidade
+                  de internet, seja através de um computador, tablet ou
+                  smartphone.
+                </div>
+              </div>
+              <div class="d-flex align-self-center mr-3">
+                <span class="u-icon-v3">
+                  <i class="u-line-icon-pro">
+                    <img src="./img/iconVisao.png" class="icon_empresa" />
+                  </i>
+                </span>
               </div>
             </div>
-            <div class="d-flex align-self-center mr-3">
-              <span class="u-icon-v3">
-                <i class="u-line-icon-pro">
-                  <img src="./img/iconVisao.png" class="icon_empresa" />
-                </i>
-              </span>
-            </div>
           </div>
+          <!-- End Icon Blocks -->
         </div>
-        <!-- End Icon Blocks -->
-      </div>
-
-      <div class="col-lg-4 g-mb-30">
-        <!-- Icon Blocks -->
-        <div class="g-pa-10">
-          <div class="media">
-            <div class="media-body align-self-center">
-              <p class="mb-0 titulo_valores">VALORES</p>
-              <div class="texto_valores">
-                Postura ética nos negócios e nos relacionamentos interpessoais
-                com transparência e foco nos objetivos. soluções inteligentes
-                e visando sempre a satisfação máxima dos nossos clientes.
+  
+        <div class="col-lg-4 g-mb-30">
+          <!-- Icon Blocks -->
+          <div class="g-pa-10">
+            <div class="media">
+              <div class="media-body align-self-center">
+                <p class="mb-0 titulo_valores">VALORES</p>
+                <div class="texto_valores">
+                  Postura ética nos negócios e nos relacionamentos interpessoais
+                  com transparência e foco nos objetivos. soluções inteligentes
+                  e visando sempre a satisfação máxima dos nossos clientes.
+                </div>
+              </div>
+              <div class="d-flex align-self-center mr-3">
+                <span class="u-icon-v3">
+                  <i class="u-line-icon-pro">
+                    <img src="./img/iconValores.png" class="icon_empresa" />
+                  </i>
+                </span>
               </div>
             </div>
-            <div class="d-flex align-self-center mr-3">
-              <span class="u-icon-v3">
-                <i class="u-line-icon-pro">
-                  <img src="./img/iconValores.png" class="icon_empresa" />
-                </i>
-              </span>
-            </div>
           </div>
+          <!-- End Icon Blocks -->
         </div>
-        <!-- End Icon Blocks -->
       </div>
     </div>
+    
     <div class="mt-3 p-5">
-      <h2>TAC CONDOMÍNIOS</h2>
       <!-- Team Block -->
       <div class="row">
         <div class="col-lg-3 col-sm-6 g-mb-30 div_itens_empresas">
