ajustes no titulo ferramentas

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             <img class="w-100" src="./img/moradores.webp" alt="Image Description">
           </div>
           <div class="flex-first w-100 u-ns-bg-v1-bottom g-z-index-1 g-py-50 g-px-50 div_ferramentas_1">
-            <h3 class="h5 text-uppercase g-mb-20">Moradores</h3>
+            <h3 class="h5 text-uppercase g-mb-20 titulo_ferramentas_2">Moradores</h3>
             <p class="mb-0 texto_div_ferramentas_1">Cadastro de todos os moradores do condomínio podendo ser acessado
               pela administração do condomínio de qualquer dispositivo precisando apenas de internet.
               Administre todos os dados dos moradores com a consulta moradores no painel administrativo do sistema.
@@ -491,7 +491,7 @@
             <img class="w-100" src="./img/reservas.jpg" alt="Image Description">
           </div>
           <div class="flex-last w-100 u-ns-bg-v1-top g-z-index-1 g-py-45 g-px-50 div_ferramentas_1">
-            <h3 class="h5 g-mb-20 text-uppercase">Reservas Online</h3>
+            <h3 class="h5 g-mb-20 text-uppercase titulo_ferramentas_2">Reservas Online</h3>
             <p class="mb-0 texto_div_ferramentas_1">Todas as áreas comuns utilizadas com reservas podem ser incluídas no
               site do condomínio online e customizadas de forma a atenderem as normas e políticas de cada condomínio.
               Selecione o local, data e horário e faça sua reserva de onde estiver.
@@ -509,7 +509,7 @@
             <img class="w-100" src="./img/visitantes.jpg" alt="Image Description">
           </div>
           <div class="flex-first w-100 u-ns-bg-v1-bottom g-z-index-1 g-py-50 g-px-50 div_ferramentas_1">
-            <h3 class="h5 text-uppercase g-mb-20">Registro de Visitas Digital</h3>
+            <h3 class="h5 text-uppercase g-mb-20 titulo_ferramentas_2">Registro de Visitas Digital</h3>
             <p class="mb-0 texto_div_ferramentas_1">Registro dos visitantes do condomínio na portaria com captura de
               imagem, inclusão dos visitantes em um livro de visitas on-line que poderá ser consultado pela
               administração a qualquer momento, por data ou entre datas, essa consulta poderá gerar um relatório de
@@ -535,7 +535,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Gestão de Correspondência</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Gestão de Correspondência</h3>
               <p class="texto_2_div_ferramentas">Cadastre as correspondências de seu condômino no sistema.
                 O sistema envia e-mail automaticamente para todos os moradores do apartamento que estão cadastrados , além disso, o sistema gera um comunicado para que possa ser impresso e colocado na caixa de correspondência, e em caso de devolução para o correio o sistema vai gerar automaticamente um relatório para ser assinado pelo carteiro.</p>
             </div>
@@ -558,7 +558,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Chamados</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Chamados</h3>
               <p class="texto_2_div_ferramentas">Registro de chamados, sugestões ou reclamaçõse, com facilidade, agilidade e sigilo.
                 Podendo ser visto, apenas, pelo codômino gerador do registro e pela administração.
                 Todas as solicitações registradas, com notificação por e-mail.</p>
@@ -581,7 +581,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Mural de Notícias</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Mural de Notícias</h3>
               <p class="texto_2_div_ferramentas">Divulgação de notícias, avisos e informações diversas, podendo ser restrito aos moradores logados ou visivel a todos que acessem o site do condomínio.</p>
             </div>
           </div>
@@ -603,7 +603,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Notificações</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Notificações</h3>
               <p class="texto_2_div_ferramentas">Permite ao síndico enviar e-mail a todos os moradores ou selecionar bloco, apartamento ou apenas um morador.
                 Gerando relatório com data do envio e recebimento.</p>
             </div>
@@ -625,7 +625,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Enquetes</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Enquetes</h3>
               <p class="texto_2_div_ferramentas">Crie até duas enquetes simultâneas, restritas para os moradores logados no sistema e acompanhe o resultado pelo painel administrativo.
                 Assim você pode definir assuntos de assembleias entre outras questões que podem ser feitas enquetes com os moradores.</p>
             </div>
@@ -647,7 +647,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Gestão de Tarefas</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Gestão de Tarefas</h3>
               <p class="texto_2_div_ferramentas">Distribua as tarefas de seus funcionários e acompanhe tudo por e-mail assim você fica sabendo o que esta acontecendo no seu condomínio sem precisar estar lá.</p>
             </div>
           </div>
@@ -668,7 +668,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Classificados</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Classificados</h3>
               <p class="texto_2_div_ferramentas">Classificados gratuitos e ilimitados para os moradores, crie classificados com até três imagens no site do seu condomínio.
                 OBS: Os classificados só vão para o site após serem liberados pela administração.</p>
             </div>
@@ -690,7 +690,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Documentos</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Documentos</h3>
               <p class="texto_2_div_ferramentas">Disponibilize documentos do condomínio em área restrita aos moradores, como atas, notas fiscais,regimento interno, convenção e comunicados, os documentos ficarão divididos em pastas por tipo para facilitar o acesso dos moradores.</p>
             </div>
           </div>
@@ -711,7 +711,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Obras e Eventos</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Obras e Eventos</h3>
               <p class="texto_2_div_ferramentas">Divulgue obras e eventos realizados em seu condomínio em área restrita para moradores.
                 Mostre aos condôminos o trabalho realizado pela sua gestão.</p>
             </div>
@@ -733,7 +733,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Autorizações</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Autorizações</h3>
               <p class="texto_2_div_ferramentas">Envie autorizações de acesso para a portaria ,liberar a entrada de prestadores de serviços, corretores de imóveis entre outros para terem acesso a seu apartamento.
                 Com as autorizações os acesos ficam liberados sem que você precise estar presente no condomínio.</p>
             </div>
@@ -755,7 +755,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Veículos</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Veículos</h3>
               <p class="texto_2_div_ferramentas">Cadastre os veículos do condomínio para maior segurança de entradas e saídas na portaria. Faça consultas com varias opções de filtros e gere relatório de todos os veículos cadastrados no sistema.</p>
             </div>
           </div>
@@ -776,7 +776,7 @@
           <!-- Article Content -->
           <div class="col-sm-7 g-px-0--sm">
             <div class="u-info-v1-1 g-height-280 div_ferramentas_1 text-center g-rounded-3">
-              <h3 class="h5 g-mb-10 text-uppercase p-2">Guia de Comércio</h3>
+              <h3 class="h5 g-mb-10 text-uppercase p-2 titulo_ferramentas_2">Guia de Comércio</h3>
               <p class="texto_2_div_ferramentas">Encontre produtos e prestadores de serviços em geral que atendem a região do condomínio.</p>
             </div>
           </div>
